[project]
name = "peasy-image"
version = "0.2.1"
description = "Python image toolkit — resize, crop, rotate, convert, compress, blur, sharpen, watermark, and 12 more operations. Powered by Pillow."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Peasy Tools" }]
keywords = [
    "image",
    "resize-image",
    "crop-image",
    "compress-image",
    "convert-image",
    "rotate-image",
    "watermark",
    "thumbnail",
    "image-tools",
    "image-toolkit",
    "image-manipulation",
    "pillow",
    "exif",
    "blur",
    "sharpen",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = ["Pillow>=10.0"]

[project.optional-dependencies]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["peasy-image[api,cli,mcp]"]

[project.scripts]
peasy-image = "peasy_image.cli:app"

[project.entry-points."mcp.servers"]
peasy-image = "peasy_image.mcp_server:mcp"

[project.urls]
Homepage = "https://peasyimage.com"
"Resize Image" = "https://peasyimage.com/tools/resize-image/"
"Compress Image" = "https://peasyimage.com/tools/compress-image/"
"Convert Image" = "https://peasyimage.com/tools/convert-image/"
Documentation = "https://peasyimage.com/developers/"
Repository = "https://github.com/peasytools/peasy-image"
Issues = "https://github.com/peasytools/peasy-image/issues"
Changelog = "https://github.com/peasytools/peasy-image/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peasy_image"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
